Good look and feel
Add bit more on projects maybe, but good template for going forward now.

Add ctf writeups
maybe for AoC

--- a/index.html
+++ b/index.html
@@ -10,46 +10,45 @@
     <div class="header">
         <h1>George Collier</h1>
         <p>Final Year Computer Science Student @ AUT</p>
-        <a href="https://github.com/georgecol" target="_blank">Github</a></li>
+            <div class="header-links">
+        <a href="https://github.com/georgecol" target="_blank">Github</a>
         <a href="https://www.linkedin.com/in/george-collier-118aa2372/" target="_blank">LinkedIn</a>
+        <a href="https://tryhackme.com/p/georgecol" target="_blank">TryHackMe</a>
+        </div>
+    </div>
+    <div class="nav">
+        <a href="index.html" id="about">About Me</a>
+        <a href="projects.html" id="project">Projects</a>
+        <a href="currentwork.html" id="working">Current Work</a>
+        <a href="ctfs.html" id="ctfs">CTFs</a>
+        <hr>
     </div>
     <div class="content">
         <div class="about-me">
-            <h2>About Me</h2>
-            <p>Passionate about Cybersecurity</p>
-        </div>
-        <div class="links">
+
+            <p>I’m a Computer Science student heading into my final year, specializing in networking, cybersecurity, and
+                software development.<br><br> I’ve always been drawn to the networking side of tech - understanding the
+                unseen protocols that power the internet.
+                <br><br>
+                I’m aiming for a career in security engineering, and I’m steadily building the programming skills needed
+                to support that path.
+                <br><br>
+                Through university I've built a solid foundation in:
             <ul>
-        </div>
-        <div class="projects">
-                        <hr />  
-            <h2>Projects</h2>
-            <ul>
-                <!-- <li>Project 1: Description of project 1.</li>
-                <li>Project 2: Description of project 2.</li>
-                <li>Project 3: Description of project 3.</li> -->
+                <li>Security+ concepts and practices</li>
+                <li>Agile development (Scrum)</li>
+                <li>CCNA 1 - Basics of Networking</li>
+                <li>CCNA 2 - Routing and Switching Concepts</li>
+                <li>Operating systems</li>
+                <li>Data structures & algorithms</li>
+                <li>Programming in Java, Python, C, and Bash</li>
             </ul>
-        </div>
-        <div class="experience">
-            <h2>Currently Working On - End of Year 2025 Break</h2>
-            <p>
-                1) Working through various Cybersecurity rooms on Tryhackme to further my knowledge and skills in the field.
-                <br>
-                <br>
-                2) Preparing for next semester's courses and projects. By familiarizing myself with the upcoming material, including:
-                <ul>
-                    <li> Advanced cryptography prep for <i>Highly Secure Systems</i></li>
-                    <li>Learning about all different types of websites (React Native, Static HTML, Hosting a website) for <i>Web Development</i></li>
-                </ul>
-                3)  Learning level 1 tech support skills in a current part time job at Health TV.
-            </p>
-
-            <p> 
-
             </p>
         </div>
+
     </div>
 
 
 </body>
+
 </html>
