--- a/currentwork.html
+++ b/currentwork.html
@@ -6,9 +6,14 @@
     <title>Currently Working On</title>
 </head>
 
-<body>
+<body class="light-mode">
     <div class="header">
-        <h1>George Collier</h1>
+        <div class="header-top">
+            <h1>George Collier</h1>
+            <button id="toggleBtn"><img src="assets/moon.png" alt="moon icon" id="icon">
+            </button>
+            <script src="script.js"></script>
+        </div>
         <p>Final Year Computer Science Student @ AUT</p>
         <div class="header-links">
             <a href="https://github.com/georgecol" target="_blank">Github</a>
@@ -16,6 +21,7 @@
             <a href="https://tryhackme.com/p/georgecol" target="_blank">TryHackMe</a>
         </div>
     </div>
+
     <div class="nav">
         <a href="index.html" id="about">About Me</a>
         <a href="projects.html" id="project">Projects</a>
