--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
     <title>GC</title>
 </head>
 
-<body>
+<body class="light-mode">
     <div class="header">
-        <h1>George Collier</h1>
+        <div class="header-top">
+            <h1>George Collier</h1>
+            <button id="toggleBtn"><img src="assets/moon.png" alt="moon icon" id="icon">
+            </button>
+            <script src="script.js"></script>
+        </div>
         <p>Final Year Computer Science Student @ AUT</p>
         <div class="header-links">
             <a href="https://github.com/georgecol" target="_blank">Github</a>
             <a href="https://www.linkedin.com/in/george-collier-118aa2372/" target="_blank">LinkedIn</a>
             <a href="https://tryhackme.com/p/georgecol" target="_blank">TryHackMe</a>
         </div>
+
     </div>
     <div class="nav">
         <a href="index.html" id="about">About Me</a>
@@ -51,7 +57,6 @@
         </div>
 
     </div>
-
 
 </body>
 
