Colour of nav elements change when swapping pages

--- a/currentwork.html
+++ b/currentwork.html
@@ -14,6 +14,7 @@
             </button>
             <script src="script.js"></script>
         </div>
+        
         <p>Final Year Computer Science Student @ AUT</p>
         <div class="header-links">
             <a href="https://github.com/georgecol" target="_blank">Github</a>
@@ -26,7 +27,7 @@
         <a href="index.html" id="about">About Me</a>
         <a href="projects.html" id="project">Projects</a>
         <a href="ctfs.html" id="ctfs">CTFs</a>
-        <a href="currentwork.html" id="working">Current Work</a>
+        <a href="currentwork.html" id="working" style="color:gray">Current Work</a>
         <hr>
     </div>
     <div class="content">
