--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="styles.css" />
-    <title>GC</title>
+    <title>About</title>
 </head>
 
 <body class="light-mode">
@@ -23,7 +23,7 @@
 
     </div>
     <div class="nav">
-        <a href="index.html" id="about">About Me</a>
+        <a href="index.html" id="about" style="color:gray">About Me</a>
         <a href="projects.html" id="project">Projects</a>
         <a href="ctfs.html" id="ctfs">CTFs</a>
         <a href="currentwork.html" id="working">Current Work</a>
