--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,8 @@
 
 <head>
     <link rel="stylesheet" href="styles.css" />
-    <title>GC</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <title>Projects</title>
 </head>
 
 <body class="light-mode">
@@ -14,7 +15,7 @@
             </button>
             <script src="script.js"></script>
         </div>
-        
+
         <p>Final Year Computer Science Student @ AUT</p>
         <div class="header-links">
             <a href="https://github.com/georgecol" target="_blank">Github</a>
@@ -25,7 +26,7 @@
     </div>
     <div class="nav">
         <a href="index.html" id="about">About Me</a>
-        <a href="projects.html" id="project">Projects</a>
+        <a href="projects.html" id="project" style="color:gray">Projects</a>
         <a href="ctfs.html" id="ctfs">CTFs</a>
         <a href="currentwork.html" id="working">Current Work</a>
         <hr>
@@ -34,13 +35,15 @@
         <div class="projects">
             <p>University:</p>
             <ul>
-                <li><a href="https://github.com/adrian-cruz-git/interactivewhiteboard" target="_blank">Interactive Whiteboard (FERN Stack) - <i>Sem 2 2025 </i></a></li>
+                <li><a href="https://github.com/adrian-cruz-git/interactivewhiteboard" target="_blank">Interactive
+                        Whiteboard (FERN Stack) - <i>Sem 2 2025 </i></a></li>
                 <li>Hotel Booking System App (Java) - <i>Sem 1 2025 </i></li>
             </ul>
             <p>Personal:</p>
             <ul>
                 <li>Portfolio Website (HTML, CSS) - <i>2025-2026</i></li>
-                <li><a href="https://github.com/georgecol/Packet-Sniffer" target="_blank">Packet Sniffer (Java) - <i>June - July 2025</i></a></li>
+                <li><a href="https://github.com/georgecol/Packet-Sniffer" target="_blank">Packet Sniffer (Java) -
+                        <i>June - July 2025</i></a></li>
                 </a>
             </ul>
 
