--- a/ctfs.html
+++ b/ctfs.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="styles.css" />
-    <title>GC</title>
+    <title>CTF's</title>
 </head>
 
 <body class="light-mode">
@@ -26,7 +26,7 @@
     <div class="nav">
         <a href="index.html" id="about">About Me</a>
         <a href="projects.html" id="project">Projects</a>
-        <a href="ctfs.html" id="ctfs">CTFs</a>
+        <a href="ctfs.html" id="ctfs" style="color:gray">CTFs</a>
         <a href="currentwork.html" id="working">Current Work</a>
         <hr>
     </div>
